[ADD] about us and services section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,15 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Navbar from "../components/Navbar.astro";
 import Intro from "../components/intro.astro";
-
+import Aboutus from "../components/aboutus.astro";
+import Services from "../components/Services.astro";
 ---
 
 <Layout title="Alexagono software. Tecnología accesible para PYMES">
 	<Navbar/>
 	<Intro />
+	<Aboutus />
+	<Services />
 </Layout>
 
 <style>
@@ -34,32 +37,5 @@ import Intro from "../components/intro.astro";
 		-webkit-text-fill-color: transparent;
 		background-size: 400%;
 		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(
-			rgba(var(--accent-dark), 66%),
-			rgba(var(--accent-dark), 33%)
-		);
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
 	}
 </style>
