--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,23 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	@font-face {
+		font-family: "visby-demibold";
+		src: url("./font/VisbyRound-DemiBold.otf");
+	}
+	@font-face {
+		font-family: "visby-bold";
+		src: url("./font/VisbyRound-Bold.otf");
+	}
+	@font-face {
+		font-family: "visby-medium";
+		src: url("./font/VisbyRound-Medium.otf");
+	}
+	@font-face {
+		font-family: "visby-normal";
+		src: url("./font/VisbyRound-Normal.otf");
+	}
+
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
@@ -33,8 +50,8 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #fff;
+		font-family: visby-normal, visby-medium, visby-demibold, visby-bold;
+		background: #232839;
 		background-size: 224px;
 	}
 	body {
@@ -43,7 +60,7 @@ const { title } = Astro.props;
 		justify-content: center;
 		align-items: center;*/
 		height: 100vh;
-		background-color: #fff;
+		background-color: #898cb9;
 	}
 	.gradient-box {
 		margin: 0;
@@ -53,6 +70,11 @@ const { title } = Astro.props;
 	}
 
 	/* CSS HANDMADE */
+	.centered-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 	.wrapper-intro {
 		display: grid;
 		grid-template-columns: 50% 50%;
@@ -92,9 +114,49 @@ const { title } = Astro.props;
 		list-style: none;
 		display: flex;
 		column-gap: 20px;
+		margin-right: 20px;
 	}
-	.menu > li > a{
+	.menu > li > a {
+		font-family: visby-bold;
 		text-decoration: none;
 		color: #fff;
+	}
+	.aboutus {
+		background: #232839;
+		display: grid;
+		grid-template-columns: 1fr 1fr; /* Two equal columns */
+		gap: 10px;
+		padding-top: 50px;
+		padding-bottom: 300px;
+		margin: 2rem;
+	}
+	.sections-title {
+		display: flex;
+		justify-content: center;
+		margin-top: 25px;
+		font-size: 2.5rem;
+		color: #d9d9d9;
+	}
+
+	.about-text {
+		grid-column: 1;
+		margin-left: 1rem;
+		color: #d9d9d9;
+		font-size: 18px;
+	}
+
+	.about-figure {
+		grid-column: 2; /* This places it in the second column */
+	}
+	.services{
+		background-color: #6062AC;
+	}
+	.container-services {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 10px;
+		padding-top: 50px;
+		padding-bottom: 300px;
+		margin: 2rem;
 	}
 </style>
